[gd_scene load_steps=5 format=3 uid="uid://cb3fe4pybinli"]

[ext_resource type="Script" uid="uid://g1hnqmk0g5rf" path="res://Scripts/UI/SettingsDialog.gd" id="1_u0s8s"]
[ext_resource type="Texture2D" uid="uid://dtc088llj5i3e" path="res://Asset/UI/Volume.png" id="2_i7wvk"]
[ext_resource type="Texture2D" uid="uid://chp34p8m0mlj5" path="res://Asset/UI/Restart.png" id="3_tsi5p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bge7e"]
bg_color = Color(0.215686, 0.215686, 0.215686, 0.878431)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.243137)
shadow_size = 5

[node name="SettingsDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u0s8s")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -175.0
offset_right = 200.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bge7e")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="VolumeContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VolumeIcon" type="TextureRect" parent="Panel/VBoxContainer/VolumeContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("2_i7wvk")
expand_mode = 1
stretch_mode = 5

[node name="VolumeSlider" type="HSlider" parent="Panel/VBoxContainer/VolumeContainer"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
size_flags_vertical = 4
value = 80.0

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="TextureButton" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_tsi5p")
ignore_texture_size = true
stretch_mode = 5
